hphp/hack/test/typecheck/xhp/required_attr/spread.php.shallow_decl.exp
File "spread.php", line 22, characters 8-20:
Required attribute `:a` is missing. (Typing[4314])
  File "spread.php", line 6, characters 42-42:
  The attribute `:a` is declared here.
File "spread.php", line 22, characters 8-20:
Required attribute `:b` is missing. (Typing[4314])
  File "spread.php", line 6, characters 69-69:
  The attribute `:b` is declared here.
File "spread.php", line 29, characters 8-20:
Required attribute `:b` is missing. (Typing[4314])
  File "spread.php", line 5, characters 42-42:
  The attribute `:b` is declared here.
File "spread.php", line 36, characters 8-20:
Required attribute `:a` is missing. (Typing[4314])
  File "spread.php", line 3, characters 42-42:
  The attribute `:a` is declared here.
